--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <nav>
                     <img src="Img/Logo White.png" alt="logonya aroma bumi">
                     <ul class="navigation-links">
-                        <a href="products.html"><li>Products</li></a>
+                        <a href="coffee.html"><li>Products</li></a>
                         <a href="map.html"><li>Store</li></a>
                         <a href="contact.html"><li>Contact</li></a>
                     </ul>
