--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <nav>
                     <img src="Img/Logo White.png" alt="logonya aroma bumi">
                     <ul class="navigation-links">
-                        <a href="coffee.html"><li>Products</li></a>
+                        <a href="menu.html"><li>Products</li></a>
                         <a href="map.html"><li>Store</li></a>
                         <a href="contact.html"><li>Contact</li></a>
                     </ul>
@@ -47,7 +47,9 @@
                         <div class="product_line"></div>
                     </div>
                     <p>Our products contain the highest quality ingredients processed with care.</p>
-                    <button type="button">See our coffee and tea</button>
+                    <a href="menu.html">
+                        <button type="button">See our coffee and tea</button>
+                    </a>
                 </div>
             </div>
 
@@ -61,7 +63,9 @@
                         <div class="hangout_line"></div>
                     </div>
                     <p>Our store use sustainable furnitures, surrounded by nature, to help our planet survive.</p>
-                    <button type="button">Find our cafes</button>
+                    <a href="map.html">                        
+                        <button type="button">Find our cafes</button>
+                    </a>
                 </div>
             </div>
 
@@ -82,7 +86,9 @@
             <div class="askus">
                 <h2>Ask us more!</h2>
                 <p>If you have any questions or interested to cooperate with us, kindly let us know here:</p>
-                <button type="button">Contact Us</button> 
+                <a href="contact.html">
+                    <button type="button">Contact Us</button> 
+                </a>
             </div>
         </main>
         <footer>
