--- a/menu.html
+++ b/menu.html
@@ -71,13 +71,15 @@
                     </div>
                 </div>
     
-                <div class="butterscotch">
-                    <div class="butterscotch-isi">
-                        <h4>Cappucino</h4>
-                        <p>Rp24.000,-</p>
-                        <img src="Img/butterscotch.png">
+                <a href="coffee.html">
+                    <div class="butterscotch">
+                        <div class="butterscotch-isi">
+                            <h4>Butterscotch</h4>
+                            <p>Rp24.000,-</p>
+                            <img src="Img/butterscotch.png">
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </main>
 
