added links to every page

--- a/coffee.html
+++ b/coffee.html
@@ -14,8 +14,8 @@
                 <nav>
                     <img src="Img/Logo White.png" alt="logonya aroma bumi">
                     <ul class="navigation-links">
-                        <a href="products.html"><li>Products</li></a>
-                        <a href="store.html"><li>Store</li></a>
+                        <a href="menu.html"><li>Products</li></a>
+                        <a href="map.html"><li>Store</li></a>
                         <a href="contact.html"><li>Contact</li></a>
                     </ul>
                 </nav>
